--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "planout": "^5.1.1",
+    "planout": "git+https://github.com/gita-v/PlanOut.js.git",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sixpack-client": "^2.1.0"
